ops/tests/compile_fail/unsupported.stderr
error[E0277]: the trait bound `&mut FastApiCallbackOptions<'_>: Deserialize<'_>` is not satisfied
  --> tests/compile_fail/unsupported.rs:17:1
   |
17 | #[op(fast)]
   | ^^^^^^^^^^^ the trait `Deserialize<'_>` is not implemented for `&mut FastApiCallbackOptions<'_>`
   |
   = help: the following other types implement trait `Deserialize<'de>`:
             &'a Path
             &'a [u8]
             &'a str
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and 143 others
note: required by a bound in `from_v8`
  --> $WORKSPACE/serde_v8/de.rs
   |
   |   T: Deserialize<'de>,
   |      ^^^^^^^^^^^^^^^^ required by this bound in `from_v8`
   = note: this error originates in the attribute macro `op` (in Nightly builds, run with -Z macro-backtrace for more info)
